objects/Lead_Ebsta_Score__c.object
<CustomObject>
    <fields>
        <fullName>Ebsta_Score__c</fullName>
        <label>Ebsta Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Email_Received__c</fullName>
        <label>Last Email Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Email_Sent__c</fullName>
        <label>Last Email Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Owner__c</fullName>
        <formula>IF( User__c == Lead__r.Owner:User.Id , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Lead Ebsta Scores</relationshipLabel>
        <relationshipName>Lead_Ebsta_Scores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Lead_Ebsta_Scores</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Lead Ebsta Score</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Lead Ebsta Score Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Ebsta Scores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>